<resources>
    <string name="app_name">homespital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首頁</string>
    <string name="menu_gallery">動作錄製</string>
    <string name="menu_slideshow">歷史資料</string>
    <string name="menu_tools">使用者資料</string>
    <string name="menu_problem">解憂小站</string>
    <string name="menu_login">login</string>
    <string name="certify">登入</string>
    <string name="username">使用者名稱</string>
    <string name="password">密碼</string>
    <string name="btnUploadToServer">上傳</string>
    <string name="version">2021-05-12-v4.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
